# bank-manager

./: .gitignore  .gitmodules  CMakeLists.txt
atm/: CMakeLists.txt
atm/src/: main.cpp
common/: CMakeLists.txt
common/include/: AccountHolder.hpp  BaseSocket.hpp  ProtocolMessage.hpp
common/src/: AccountHolder.cpp  BaseSocket.cpp  ProtocolMessage.cpp
finance_system/: CMakeLists.txt
tests/: CMakeLists.txt  test_base_socket.cpp
